--- a/ios/Sources/Forms/Tables/___TABLE___/___TABLE___DetailsForm.storyboard
+++ b/ios/Sources/Forms/Tables/___TABLE___/___TABLE___DetailsForm.storyboard
@@ -326,6 +326,7 @@
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Kda-O0-f46">
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" name="BackgroundColor"/>
                         <color key="tintColor" name="ForegroundColor"/>
                         <color key="barTintColor" name="BackgroundColor"/>
                         <textAttributes key="titleTextAttributes">
